changed contact info, deleted navi bar

--- a/projects/csa.html
+++ b/projects/csa.html
@@ -15,10 +15,10 @@
 		<div align="center" style="background:#424242;">
 		<nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
-        		<li><a href="/">Home</a></li>
+        <!--         		<li><a href="/">Home</a></li>
         		<li><a href="/blog.html">Blog</a></li>
         		<li><a href="/projects.html">Projects</a></li>
-        		<li><a href="/contact.html">Contact</a></li>
+        		<li><a href="/contact.html">Contact</a></li> -->
     		</ul>
 		</nav>
 		</div>
@@ -52,7 +52,7 @@
 
     <p>You can assume the stories are in vaguely chronological order, but there's so much overlap and ambiguity only those 4 sections are concrete enough to worry about. You shouldn't necessarily have to read them in order to understand what's going on so read whichever has a synopsis you like. I tried to use this as an exercise in writing stuff in different ways. Also a big TRIGGER WARNING for anyone who has been a victim of murder, rape, or society at large.</p>
 
-    <p>It's full of spelling errors and probably more than one plot hole, but hey, you get what you pay for. Feel free to email me comments, reviews, edits, or suggestions.</p>
+    <p>It's full of spelling errors and probably more than one plot hole, but hey, you get what you pay for. Feel free to email me comments, reviews, edits, or suggestions using the mail icon in the share bar at the bottom of the page.</p>
   </div>
 
 
@@ -600,7 +600,7 @@
 
   <p>Chapter 6</p>
   <div style="display:inline-flex;">
-  <div >
+  <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#theantlion" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/6.png" border="0" alt="" class="button_pic"/> The Ant Lion</button></div>
             <div id="tag_box">
             A man creates the largest raider gang of all time to protect his daughter.
@@ -3016,13 +3016,13 @@
   <div align="center">
   <ul class="social-icons list-unstyled list-inline"> 
        <li style="color:#EEEEEE;font-size:20px;"><i class="fa fa-share-alt"></i> Share: </li> 
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/submit/?url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-reddit"></i></a></li>  
-        <li style="color:#3355EE;font-size:20px;"> <a href="mailto:?subject=Normally%20the%20site%20tagline%20would%20go%20here.&amp;body=https%3A%2F%2Faustincap.github.io"><i class="fa fa-envelope"></i></a> </li> 
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://twitter.com/intent/tweet/?text=Normally%20the%20site%20tagline%20would%20go%20here.&amp;url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-twitter"></i></a> </li> 
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Faustincap.github.io"><i class="fa fa-facebook"></i></a></li>  
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Faustincap.github.io&amp;title=Normally%20the%20site%20tagline%20would%20go%20here.&amp;summary=Normally%20the%20site%20tagline%20would%20go%20here.&amp;source=https%3A%2F%2Faustincap.github.io"><i class="fa fa-linkedin"></i></a></li>
-        <li style="color:#3355EE;font-size:20px;"> <a href="http://www.stumbleupon.com/submit?url=https://austincap.github.io&title=austincap.github.io"><i class="fa fa-stumbleupon"></i></a></li> 
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://plus.google.com/share?url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-google-plus"></i></a></li> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/submit/?url=https%3A%2F%2Faustincap.github.io/projects/csa.html"><i class="fa fa-reddit"></i></a></li>  
+        <li style="color:#3355EE;font-size:20px;"> <a href="mailto:austin.capobianco@gmail.com?subject=My%20thoughts%20on%20CSA&amp;body=9%2F10"><i class="fa fa-envelope"></i></a> </li> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://twitter.com/intent/tweet/?text=Normally%20the%20site%20tagline%20would%20go%20here.&amp;url=https%3A%2F%2Faustincap.github.io/projects/csa.html"><i class="fa fa-twitter"></i></a> </li> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Faustincap.github.io/projects/csa.html"><i class="fa fa-facebook"></i></a></li>  
+       <!--         <li style="color:#3355EE;font-size:20px;"> <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Faustincap.github.io&amp;title=Normally%20the%20site%20tagline%20would%20go%20here.&amp;summary=Normally%20the%20site%20tagline%20would%20go%20here.&amp;source=https%3A%2F%2Faustincap.github.io"><i class="fa fa-linkedin"></i></a></li> -->
+        <li style="color:#3355EE;font-size:20px;"> <a href="http://www.stumbleupon.com/submit?url=https://austincap.github.io/projects/csa.html&title=CSA: A cyberpunk shortstory anthology"><i class="fa fa-stumbleupon"></i></a></li> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://plus.google.com/share?url=https%3A%2F%2Faustincap.github.io/projects/csa.html"><i class="fa fa-google-plus"></i></a></li> 
       </ul>
   </div>
 
