--- a/projects/csa.html
+++ b/projects/csa.html
@@ -48,11 +48,11 @@
 
     <p>7,8,9 - Life in megacorp microstates within Freeland, set in 2030s-2050s</p>
 
-    <p>10,11,12 - Powerful individuals of Freeland, set in 2070s-2080s</p>
+    <p>10,11,12 - Powerful individuals of Freeland, set in 2070s-2090s</p>
 
     <p>You can assume the stories are in vaguely chronological order, but there's so much overlap and ambiguity only those 4 sections are concrete enough to worry about. You shouldn't necessarily have to read them in order to understand what's going on so read whichever has a synopsis you like. I tried to use this as an exercise in writing stuff in different ways. Also a big TRIGGER WARNING for anyone who has been a victim of murder, rape, or society at large.</p>
 
-    <p>It's full of spelling errors and probably more than one plot hole, but hey, you get what you pay for. Feel free to email me comments, reviews, edits, or suggestions using the mail icon in the share bar at the bottom of the page.</p>
+    <p>It's full of spelling errors and probably more than one plot hole, but hey, you get what you pay for. Feel free to email me comments, reviews, edits, or suggestions using the mail icon in the share bar at the bottom of the page or <a href="mailto:austin.capobianco@gmail.com?subject=My%20thoughts%20on%20CSA&amp;body=9%2F10">click this</a>.</p>
   </div>
 
 
