added hate list link

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,8 @@
    </div>
 
   <div id="earthb" class="collapse" style="margin-left:0%;">
-  <p>A game for Android devices.</p>
+  <a href="#">Link to Earth B app.</a>
+  <p>A real-time RPG for Android devices.</p>
  </div>
 
 <hr />
@@ -68,13 +69,13 @@
             <ul>
               <li>Mustache</li>
               <li>Mongo</li>
-              <li>Cookies</li>
+
             </ul>
             </div>
    </div>
 
   <div id="thehatelist" class="collapse" style="margin-left:0%;">
-  <a href="#">Link to The Hate List site.</a>
+  <a href="http://159.203.169.144:4000/">Link to The Hate List site.</a>
   <p>Vote for the most hated person in the world. Inspired by the novel Adjustment Day.</p>
  </div>
 
@@ -97,7 +98,7 @@
   <p>The battlefield of ideas. There's also 20 other taglines.</p>
  </div>
 
-<hr />
+  <!-- <hr />
 
   <div style="display:inline-flex;">
   <div style="margin:auto;">
@@ -112,7 +113,7 @@
   <div id="csa" class="collapse" style="margin-left:0%;">
   <a href="/projects/csa.html">Link to CSA.</a>
   <p>A cyberpunk shortstory anthology.</p>
- </div>
+ </div> -->
 
 
 
@@ -131,7 +132,7 @@
    </div>
 
   <div id="personanexus" class="collapse" style="margin-left:0%;">
-  <a href="http://104.138.184.164:8008/test/analytics/personanexus.html">Link to Personanexus site.</a>
+  NOT ACTIVE <a href="#">Link to Personanexus site.</a>
   <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
 
@@ -169,7 +170,7 @@
   <ul class="social-icons list-unstyled list-inline"> 
        <li style="color:#EEEEEE;font-size:20px;"><i class="fa fa-share-alt"></i> Share: </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/submit/?url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-reddit"></i></a></li>  
-        <li style="color:#3355EE;font-size:20px;"> <a href="mailto:?subject=Normally%20the%20site%20tagline%20would%20go%20here.&amp;body=https%3A%2F%2Faustincap.github.io"><i class="fa fa-envelope"></i></a> </li> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="mailto:?subject=Hey%20.&amp;body=https%3A%2F%2Faustincap.github.io"><i class="fa fa-envelope"></i></a> </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://twitter.com/intent/tweet/?text=Normally%20the%20site%20tagline%20would%20go%20here.&amp;url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-twitter"></i></a> </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Faustincap.github.io"><i class="fa fa-facebook"></i></a></li>  
         <li style="color:#3355EE;font-size:20px;"> <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Faustincap.github.io&amp;title=Normally%20the%20site%20tagline%20would%20go%20here.&amp;summary=Normally%20the%20site%20tagline%20would%20go%20here.&amp;source=https%3A%2F%2Faustincap.github.io"><i class="fa fa-linkedin"></i></a></li>
