--- a/projects/csa.html
+++ b/projects/csa.html
@@ -40,7 +40,7 @@
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-    <p>What does CSA stand for? Whatever you want. Cyberpunk Shortstory Anthology. Cracked States of America. Contemporary Social Anatomy. Chaotic State of Anarchy. Completely Scientifically Accurate. Cool Sick Awesome. Crap Shit Ass. Whatever you read into CSA is on you. Here's a breakdown of the work as a whole.</p>
+    <p>What does CSA stand for? Whatever you want. Cyberpunk Shortstory Anthology. Cracked States of America. Contemporary Social Anatomy. Chaotic State of Anarchy. Completely Scientifically Accurate. Cool Sick Awesome. Crap Shit Ass. Confederate States of America. Cynical Stupid Action. Whatever you read into CSA is on you. Here's a breakdown of the work as a whole.</p>
 
     <p>1,2,3 - America before it dissolved, vague time periods for this and for everything else, this section is set in the 2010s-2020s</p>
 
@@ -59,7 +59,7 @@
  
 <hr />
 
-  <p>Chapter 1</p>
+  <p>Episode 1</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#allagame" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/1.png" border="0" alt="" class="button_pic"/> It's All a Game to Me</button></div>
@@ -224,7 +224,7 @@
 
 <hr />
 
-  <p>Chapter 2</p>
+  <p>Episode 2</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#revsmowee" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/2.png" border="0" alt="" class="button_pic"/> Revolutionaries Smoke Weed</button></div>
@@ -275,7 +275,7 @@
 
 <hr/>
 
-  <p>Chapter 3</p>
+  <p>Episode 3</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#socfem" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/3.png" border="0" alt="" class="button_pic"/> Sociopathy is a Feminine Trait</button></div>
@@ -344,7 +344,7 @@
 
 <hr/>
 
-  <p>Chapter 4</p>
+  <p>Episode 4</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#history" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/4.png" border="0" alt="" class="button_pic"/> A People's History of Dissolution</button></div>
@@ -404,7 +404,7 @@
 
 <hr/>
 
-  <p>Chapter 5</p>
+  <p>Episode 5</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oracle" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/5.png" border="0" alt="" class="button_pic"/> Offline Revolutionary Administration Communication Legislation Executor</button></div>
@@ -598,7 +598,7 @@
 
 <hr/>
 
-  <p>Chapter 6</p>
+  <p>Episode 6</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#theantlion" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/6.png" border="0" alt="" class="button_pic"/> The Ant Lion</button></div>
@@ -956,7 +956,7 @@
 
 <hr/>
 
-  <p>Chapter 7</p>
+  <p>Episode 7</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#alwayslow" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/7.png" border="0" alt="" class="button_pic"/> Always Low Prices, Always</button></div>
@@ -1206,7 +1206,7 @@
 
 <hr/>
 
-  <p>Chapter 8</p>
+  <p>Episode 8</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#mcbildungs" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/8.png" border="0" alt="" class="button_pic"/> McBildungsroman</button></div>
@@ -1646,7 +1646,7 @@
 
 <hr/>
 
-  <p>Chapter 9</p>
+  <p>Episode 9</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#inalllies" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/9.png" border="0" alt="" class="button_pic"/> In All Lies Are Truth</button></div>
@@ -2005,7 +2005,7 @@
 
 <hr/>
 
-  <p>Chapter 10</p>
+  <p>Episode 10</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oneanother" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/10.png" border="0" alt="" class="button_pic"/> Like One Another</button></div>
@@ -2368,7 +2368,7 @@
 
 <hr/>
 
-  <p>Chapter 11</p>
+  <p>Episode 11</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#immortality" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/11.png" border="0" alt="" class="button_pic"/> Hyper-Immortality</button></div>
@@ -2845,7 +2845,7 @@
 
 <hr/>
 
-  <p>Chapter 12</p>
+  <p>Episode 12</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#danilseong" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/12.png" border="0" alt="" class="button_pic"/> Dan-ilseong</button></div>
@@ -2956,7 +2956,7 @@
 
 <hr/>
 
-  <p>Chapter A</p>
+  <p>Episode A</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#appendix" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/appendix.png" border="0" alt="" class="button_pic"/> Appendix</button></div>
