added rpg maker game

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
  <html>
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   	 <title>Austin Capobianco Data Analytics</title>
+   	 <title>Austin Capobianco</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -37,7 +37,7 @@
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  The current project is just the thing I'm working on the most right now. I usually am working on several things simultaneously. The bulleted list are the some of technologies I used to create the project and if you click the button you can see the project for yourself.
+  The current project is just the thing I'm working on the most right now. I usually am working on several things simultaneously and everything is technically a work-in-progress always subject to improvement. The bulleted list are the some of technologies/skills I used to create the project and if you click the button you can get more detail about it.
   </div>
 
 <hr/>
@@ -45,8 +45,9 @@
   <p>Current Project</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#earthb" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Earth B</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#earthb" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Earth B Android App</button></div>
             <div id="tag_box">
+            OFFLINE <a href="#">Link to Earth B android app.</a>
             <ul>
               <li>Android</li>
               <li>Unity</li>
@@ -56,26 +57,45 @@
    </div>
 
   <div id="earthb" class="collapse" style="margin-left:0%;">
-  <a href="#">Link to Earth B app.</a>
-  <p>A real-time RPG for Android devices.</p>
+  <p>An isolated real-time RPG battle/menu system for Android devices. Mostly an experiment in learning Unity and C#.</p>
  </div>
 
 <hr />
 
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#thehatelist" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> The Hate List</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rpgmaker" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="https://hb.imgix.net/e705f5f10eb7e5f15e80b8960f993243123c2983.jpg?auto=compress,format;&amp;fit=crop&amp;h=353&amp;w=616&amp;s=c95108d01a30b746fd0bc4c8a5e3b6dd" border="0" alt="" class="button_pic"/> Earth B RPG Maker Game</button></div>
             <div id="tag_box">
+              <a href="https://mega.nz/#!1k4DwKBS!FMSgisRHUz1xVNwteINLbaxEEDkCZStkWj7DUdMzGj4">Link to Earth B RPG Maker game.</a>
+            <ul>
+              <li>RPG Maker VX Ace</li>
+              <li>Game design</li>
+              <li>Pixel art</li>
+            </ul>
+            </div>
+   </div>
+
+  <div id="rpgmaker" class="collapse" style="margin-left:0%;">
+  <p>A traditional side-scrolling RPG taking place entirely in a vertical city. It is extremely open-ended and plays like a miniature cross between Fallout and LISA. This is an hour-long demo for a potential longer game.</p>
+ </div>
+
+<hr />
+
+  <div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#thehatelist" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="https://images.gr-assets.com/books/1515460711l/36349731.jpg" border="0" alt="" class="button_pic"/> The Hate List</button></div>
+            <div id="tag_box">
+            <a href="http://159.203.169.144:4000/">Link to The Hate List site.</a>
             <ul>
               <li>Mustache</li>
               <li>Mongo</li>
-
+              <li>Javascript</li>
             </ul>
             </div>
    </div>
 
   <div id="thehatelist" class="collapse" style="margin-left:0%;">
-  <a href="http://159.203.169.144:4000/">Link to The Hate List site.</a>
+  
   <p>Vote for the most hated person in the world. Inspired by the novel Adjustment Day.</p>
  </div>
 
@@ -85,6 +105,7 @@
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#memewar" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/mv.png" border="0" alt="" class="button_pic"/> Meme War</button></div>
             <div id="tag_box">
+              <a href="http://memewar.io">Link to Meme War site.</a>
             <ul>
               <li>Neo4j</li>
               <li>Phaser</li>
@@ -94,8 +115,7 @@
    </div>
 
   <div id="memewar" class="collapse" style="margin-left:0%;">
-  <a href="http://memewar.io">Link to Meme War site.</a>
-  <p>The battlefield of ideas. There's also 20 other taglines.</p>
+  <p>The battlefield of ideas. Reddit meets Minecraft. There's also 20 other taglines.</p>
  </div>
 
   <!-- <hr />
@@ -123,6 +143,7 @@
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Personanexus</button></div>
             <div id="tag_box">
+              OFFLINE <a href="#">Link to Personanexus site.</a>
             <ul>
               <li>PHP</li>
               <li>Mongo</li>
@@ -132,7 +153,6 @@
    </div>
 
   <div id="personanexus" class="collapse" style="margin-left:0%;">
-  NOT ACTIVE <a href="#">Link to Personanexus site.</a>
   <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
 
