--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
  <html>
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   	 <title>Austin Capobianco Data Analytics</title>
+   	 <title>Austin Capobianco - Contact</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,30 +34,31 @@
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> Who's Austin?</button></div>
 
             <div id="tag_box">
-            <p>Click the button to the left for more info about me, or just email me at: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> </p>
+            <p>An American app developer, game designer, and data analyst. I have a ridiculously eclectic skill set which I hopefully demonstrate in my projects and blog. Feel free to contact me on these social media sites 
+            <ul class="social-icons list-unstyled list-inline" > 
+              <!-- <li> <a href="https://reddit.com/u/The_Data_Guy" class="icon_on_background"><i class="fa fa-reddit"></i></a></li>   --> 
+              <li> <a href="https://www.facebook.com/austin.capobianco.9" class="icon_on_background"><i class="fa fa-facebook"></i></a></li>  
+              <li> <a href="https://www.linkedin.com/in/austincapobianco" class="icon_on_background"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+            but the best way to get in touch is sending an email to: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> </p>
             </div>
 </div>
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  The data guy of Winston-Salem. Feel free to check out my web presence on these social media sites:   <ul class="social-icons list-unstyled list-inline" > 
-        <li> <a href="https://reddit.com/u/The_Data_Guy" class="icon_on_background"><i class="fa fa-reddit"></i></a></li>   
-        <li> <a href="https://www.facebook.com/austin.capobianco.9" class="icon_on_background"><i class="fa fa-facebook"></i></a></li>  
-        <li> <a href="https://www.linkedin.com/in/austincapobianco" class="icon_on_background"><i class="fa fa-linkedin"></i></a></li>
-        <li> <a href="https://plus.google.com/u/0/106792204416719365033" class="icon_on_background"><i class="fa fa-google-plus"></i></a></li> 
-      </ul>
+  <p></p>
   </div>
 
 
 <hr  />
 
-  <div style="display:inline-flex;">
+  <!--   <div style="display:inline-flex;">
    <div style="margin:auto;">
    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0  !important;font-size:170% !important;white-space:normal !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" class="button_pic"/> Web presence</button></div>
             <div id="tag_box">
              Feel free to investigate me on your own terms. Click the button to the left for access to my profiles on a variety of sites.
             </div>
-  </div>
+  </div> -->
 
 
   <div id="latestpost" class="collapse" style="margin-left:0%;">
@@ -72,7 +73,7 @@
 </div>
 
 
-<div class="container">
+<!-- <div class="container">
    <h2 align="center">Skills</h2>
 </div>
 <div class="container">
@@ -92,7 +93,7 @@
  </tr>
 
  </table>
- </div>
+ </div> -->
 
 
 <footer style="width:100%;background:#424242;padding-top:5px;">  
