--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   	 <title>Stuff Made By Austin Capobianco</title>
+   	 <title>Austin Capobianco - Home</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,13 +34,13 @@
    <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this site</button></div>
           <div id="tag_box">
-          This site will have posts documenting my various projects as well as various ideas I try to pursue. Click the button to the left for more detail.
+          This site will have posts documenting my various projects and ideas. Click the button to the left for more detail.
             </div>
   </div>
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  The blog will have more of my data science work.
+  <p></p>
   </div>
 
 
