--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,13 @@
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> Who's Austin?</button></div>
 
             <div id="tag_box">
-            <p>An American app developer, game designer, and data analyst. I have a ridiculously eclectic skill set which I hopefully demonstrate in my projects and blog. Feel free to contact me on these social media sites 
+            <p>An American app developer, game designer, and data analyst. I have a ridiculously eclectic skill set which I hopefully demonstrate in my projects and blog. Feel free to contact me on <a href="https://www.facebook.com/austin.capobianco.9">facebook</a> or <a href="https://www.linkedin.com/in/austincapobianco">linkedin</a> but the best way to get in touch is sending an email to: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> 
             <ul class="social-icons list-unstyled list-inline" > 
-              <!-- <li> <a href="https://reddit.com/u/The_Data_Guy" class="icon_on_background"><i class="fa fa-reddit"></i></a></li>   --> 
+              <!-- <li> <a href="https://reddit.com/u/The_Data_Guy" class="icon_on_background"><i class="fa fa-reddit"></i></a></li>   
               <li> <a href="https://www.facebook.com/austin.capobianco.9" class="icon_on_background"><i class="fa fa-facebook"></i></a></li>  
-              <li> <a href="https://www.linkedin.com/in/austincapobianco" class="icon_on_background"><i class="fa fa-linkedin"></i></a></li>
+              <li> <a href="https://www.linkedin.com/in/austincapobianco" class="icon_on_background"><i class="fa fa-linkedin"></i></a></li>--> 
             </ul>
-            but the best way to get in touch is sending an email to: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> </p>
+            </p>
             </div>
 </div>
 
