--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
    <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this site</button></div>
           <div id="tag_box">
-          This site will have posts documenting my various projects and ideas. Click the button to the left for more detail.
+          This site is mainly a place to house all my projects.
             </div>
   </div>
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  <p></p>
+  <p>Usually these buttons show more information when you click them.</p>
   </div>
 
 
