--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rpgmaker" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="https://hb.imgix.net/e705f5f10eb7e5f15e80b8960f993243123c2983.jpg?auto=compress,format;&amp;fit=crop&amp;h=353&amp;w=616&amp;s=c95108d01a30b746fd0bc4c8a5e3b6dd" border="0" alt="" class="button_pic"/> Earth B RPG Maker Game</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rpgmaker" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="/res/heaven.png" border="0" alt="" class="button_pic"/> Earth B RPG Maker Game</button></div>
             <div id="tag_box">
               <a href="https://mega.nz/#!1k4DwKBS!FMSgisRHUz1xVNwteINLbaxEEDkCZStkWj7DUdMzGj4">Link to Earth B RPG Maker game.</a>
             <ul>
@@ -76,7 +76,7 @@
    </div>
 
   <div id="rpgmaker" class="collapse" style="margin-left:0%;">
-  <p>A traditional side-scrolling RPG taking place entirely in a vertical city. It is extremely open-ended and plays like a miniature cross between Fallout and LISA. This is an hour-long demo for a potential longer game.</p>
+  <p>A traditional side-scrolling RPG taking place entirely in a vertical city. It is extremely open-ended and plays like a miniature cross between Fallout and LISA. This is an hour-long demo for a potential longer game and the only assets that are 100% my own are the environments.</p>
  </div>
 
 <hr />
