--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rpgmaker" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="/res/heaven.png" border="0" alt="" class="button_pic"/> Earth B RPG Maker Game</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#rpgmaker" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/heaven.png" border="0" alt="" class="button_pic"/> Earth B RPG Maker Game</button></div>
             <div id="tag_box">
               <a href="https://mega.nz/#!1k4DwKBS!FMSgisRHUz1xVNwteINLbaxEEDkCZStkWj7DUdMzGj4">Link to Earth B RPG Maker game.</a>
             <ul>
