--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
 
 <div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
 
-  <h1 align="center">Austin Capobianco</h1>
+  <h1 align="center">Blog</h1>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this blog</button></div>
@@ -38,7 +38,7 @@
     </div>
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  <p></p>
+  <p>There is more of a focus on data science.</p>
   </div>
 
 
