--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
- <html>
+ <html>http://i47.servimg.com/u/f47/11/47/76/34/testov10.jpg
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    	 <title>Austin Capobianco - Blog</title>
