--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,shrink-to-fit=no"/><meta name="author" content="Many.bio - create your micro-site for socials"><link rel="icon" id="favicon" href="/assets/img/favicon/favicon.ico"/><link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png" id="favicon_apple"/><link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" id="favicon_32"/><link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" id="favicon_16"/><link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5" id="favicon_mask"/><script>var userid = 1;
+<!doctype html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,shrink-to-fit=no"/>
+  <script>
+    var userid = 1;
       var pageid = 1;
          var website_url = "https://api.many.bio/";
       // var website_url = "https://many.test/";
@@ -6,7 +8,7 @@
         font-family: gilroy;
         font-style: normal;
         font-weight: 300;
-        src: url("/assets/fonts/gilroy/Gilroy-Regular.eot?") format("eot"),
+        src: url("/assets/fonts/gilroy/Gilroy-Regular.ttf?") format("ttf"),
           url("/assets/fonts/gilroy/Gilroy-Regular.woff") format("woff");
       }
 
@@ -14,7 +16,7 @@
         font-family: gilroy;
         font-style: normal;
         font-weight: 400;
-        src: url("/assets/fonts/gilroy/Gilroy-Medium.eot?") format("eot"),
+        src: url("/assets/fonts/gilroy/Gilroy-Medium.ttf?") format("ttf"),
           url("/assets/fonts/gilroy/Gilroy-Medium.woff") format("woff");
       }
 
@@ -22,7 +24,7 @@
         font-family: gilroy;
         font-style: normal;
         font-weight: 500;
-        src: url("/assets/fonts/gilroy/Gilroy-SemiBold.eot?") format("eot"),
+        src: url("/assets/fonts/gilroy/Gilroy-SemiBold.ttf?") format("ttf"),
           url("/assets/fonts/gilroy/Gilroy-SemiBold.woff") format("woff");
       }
 
@@ -30,6 +32,13 @@
         font-family: gilroy;
         font-style: normal;
         font-weight: 700;
-        src: url("/assets/fonts/gilroy/Gilroy-ExtraBold.eot?") format("eot"),
+        src: url("/assets/fonts/gilroy/Gilroy-ExtraBold.ttf?") format("ttf"),
           url("/assets/fonts/gilroy/Gilroy-ExtraBold.woff") format("woff");
-      }</style><script defer="defer" src="/z.c951b99bdd5d0f926ee4.js"></script></head><body><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KJTC3DV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><noscript>You need to enable JavaScript to run this app.</noscript><div id="app"></div></body></html>
+      }</style></script></head>
+
+      <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="app"></div>
+
+        <a href="youtube.com"><div>youtube</div></a>
+      </body></html>
